[package]
name = "rust-micro"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # 编译为 Node.js 可加载的动态库

[dependencies]
napi = "2.16.17"
napi-derive = "2.16.13"
# windows = "0.60"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Variant",
    "Win32_System_Com_StructuredStorage"
]}


